case-study wrap fix

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -14,7 +14,7 @@
   justify-content: space-around;
   flex: 1;
   height: 100%;
-  width: 70%;
+  width: 80%;
   margin: 25px 0px;
 }
 
