--- a/css/style.css
+++ b/css/style.css
@@ -1071,7 +1071,7 @@ blockquote p {
   justify-content: space-around;
   flex: 1;
   height: 100%;
-  width: 70%;
+  width: 80%;
   margin: 25px 0px; }
 
 .case-study {
